# krypton

./: .gitignore  README.md  docker-compose.yml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
bot/: Cargo.toml  Dockerfile  pyproject.toml  requirements.txt
bot/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250417_112923_add_wallet_address_to_payment.rs
bot/src/: bot.py  commands.rs  db.py  description.md  krypton_bot.rs  main.rs  state.rs
bot/src/db/: channel.rs  invite_link.rs  membership.rs  mod.rs  settings.rs  subscriptions.rs  transaction.rs  user.rs
bot/src/qr/: mod.rs  qr.rs
bot/src/ton/: address_validator.rs  mod.rs
bot/src/ui/: info.rs  mod.rs  pay.rs  price.rs
db/: Cargo.toml  Dockerfile  krypton_db.sql
db/migration/: Cargo.toml
db/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250417_121459_add_message_id.rs  m20250418_122825_add_subscriptions_table.rs  m20250429_130451_create_chat_id_field.rs
db/src/: channel.rs  lib.rs  transaction.rs  user.rs
events/: Cargo.toml
events/src/: event.rs
frontend/: .gitignore  astro.config.mjs  bun.lockb  eslint.config.js  package-lock.json  package.json  prettierrc.mjs  tailwind.config.mjs  tsconfig.json
frontend/public/: tonconnect-manifest.json
frontend/src/components/: Welcome.astro
frontend/src/context/: index.tsx
frontend/src/features/: welcome.astro
frontend/src/features/button/: index.tsx
frontend/src/layouts/: index.astro
frontend/src/pages/: index.astro
frontend/src/styles/: index.css
frontend/src/types/: index.ts
ton-watcher/: Cargo.toml
ton-watcher/src/: main.rs
ui/: bun.lockb  package.json
ui/app/: page.tsx
ui/app/pay/[id]/: page.tsx
