[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenv = "0.15.0"
redis = { version = "0.30.0", features = ["tokio-comp", "aio"] }
serde = { version="1.0.219", features = ["derive"] }
tokio = { version="1.45.0", features=["rt-multi-thread", "macros"] }
sea-orm = { version = "1.1.11", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
db = { path = "../db" }
events = { path = "../events" }
serde_json = "1.0.140"
