[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"]}
dotenv = "0.15.0"
redis = { version = "0.30.0", features = ["tokio-comp", "aio"] }
serde = { version="1.0.219", features = ["derive"] }
tokio = { version="1.45.0", features=["rt-multi-thread", "macros"] }
sea-orm = { version = "1.1.11", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
db = { path = "../db" }
events = { path = "../events" }
serde_json = "1.0.140"
axum-extra = { version="0.10.1", features = ["typed-header"] }
rust_decimal = "1.37.1"
chrono = "0.4.41"
rand = "0.9.1"
base64 = "0.22.1"
ed25519-dalek = "2.1.1"
