[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
dotenv = "0.15.0"
log = "0.4.26"
pretty_env_logger = "0.5.0"
sea-orm = { version = "1.1.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde_json = "1.0.140"
teloxide = { version = "0.13.0", features=["macros"] }
thiserror = "2.0.12"
tokio = { version = "1.43.0", features=["rt-multi-thread", "macros"] }
