[package]
name = "ton-watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
tokio = { version = "1.43.0", features=["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
redis = { version = "0.30.0", features = ["tokio-comp", "aio"] }
sea-orm = { version = "1.1.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
events = { path = "../events" }
serde_json = "1.0.140"
serde = { version="1.0.219", features=["derive"] }
reqwest = { version="0.12.15", features = ["json", "rustls-tls"] }
